[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/Player/player.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Player/progress.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/backstamina.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/torch_light.png" type="Texture" id=5]
[ext_resource path="res://assets/Music/death_final_ambient.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/Music/cave_ambient.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/Music/breaking-glass-and-flash.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/Evidence/crucifix.png" type="Texture" id=9]
[ext_resource path="res://assets/Player/bottle_of_light.png" type="Texture" id=10]

[sub_resource type="CanvasItemMaterial" id=17]
blend_mode = 3
light_mode = 2

[sub_resource type="Animation" id=12]
resource_name = "Death"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ 11, 12, 13 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 2, 3, 0 ]
}

[sub_resource type="CanvasItemMaterial" id=20]
blend_mode = 3
light_mode = 2

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.026
height = 18.0

[sub_resource type="Gradient" id=14]
interpolation_mode = 2
offsets = PoolRealArray( 0.0144404, 0.559567, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 14.652, 14.652, 14.652, 0.85348, 100, 100, 100, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=13]
flag_rotate_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 90.0
gravity = Vector3( 0, 300, 0 )
initial_velocity = 200.1
initial_velocity_random = 0.04
angular_velocity = 424.33
angular_velocity_random = 0.44
orbit_velocity = 0.2
orbit_velocity_random = 0.0
damping = 100.0
angle_random = 0.51
color_ramp = SubResource( 15 )

[sub_resource type="GradientTexture2D" id=16]
width = 500
height = 500

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

uniform vec4 color_1 = vec4(.0, .0, .0, 1.0);
uniform vec4 color_2 = vec4(0.5, 0.5, 0.5, 1.0);

void fragment() {

	vec4 colors[2] = {color_1, color_2};
	float min_diff = -1.0;
	vec4 min_color = vec4(0.0, 0.0, 0.0, 1.0);

	vec2 uv = SCREEN_UV;

	vec4 temp = textureLod(SCREEN_TEXTURE, uv, 0.0);

	min_diff = 1000.0;
	for (int i = 0; i < colors.length(); i++) {

		float curr_dist = distance(colors[i], temp);
		if (curr_dist < min_diff) {
			min_diff = curr_dist;
			min_color = colors[i];
		}
	}

	COLOR.rgb = min_color.rgb;
}"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 18 )
shader_param/color_1 = Plane( 0, 0, 0, 1 )
shader_param/color_2 = Plane( 0.5, 0.5, 0.5, 1 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
light_mask = 3
z_index = 500
z_as_relative = false
collision_layer = 3
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )
limit_smoothed = true
smoothing_enabled = true

[node name="Player" type="Sprite" parent="."]
material = SubResource( 17 )
position = Vector2( -2, -17 )
z_index = 999
z_as_relative = false
texture = ExtResource( 1 )
hframes = 14
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 12 )
anims/RESET = SubResource( 2 )
anims/Walk = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="Stamina_bar" type="TextureProgress" parent="."]
show_behind_parent = true
light_mask = 0
anchor_bottom = 0.142
margin_left = -26.0
margin_top = -40.0
margin_right = 6.0
margin_bottom = -8.0
max_value = 1000.0
value = 1000.0
rounded = true
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
fill_mode = 4

[node name="Crucifix" type="TextureRect" parent="."]
visible = false
light_mask = 0
material = SubResource( 20 )
margin_left = -44.0
margin_top = -20.0
margin_right = 316.0
margin_bottom = 420.0
rect_scale = Vector2( 0.0785212, 0.0700651 )
texture = ExtResource( 9 )

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
margin_left = 7.0
margin_top = -48.0
margin_right = 52.0
margin_bottom = -15.0
custom_constants/vseparation = 0
custom_constants/hseparation = -5
columns = 3

[node name="bottle1" type="TextureRect" parent="GridContainer"]
light_mask = 0
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 10 )

[node name="torch_light" type="Light2D" parent="."]
show_behind_parent = true
position = Vector2( -0.999992, -11 )
scale = Vector2( 1.89844, 1.88361 )
z_index = -1
texture = ExtResource( 5 )
texture_scale = 6.0
color = Color( 1, 0.643137, 0.392157, 1 )
energy = 1.82
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )

[node name="bigger_light2" type="Light2D" parent="."]
show_behind_parent = true
position = Vector2( -1, -9 )
scale = Vector2( 1.89844, 1.88361 )
z_index = -1
texture = ExtResource( 5 )
texture_scale = 4.0
color = Color( 0.988235, 0.713726, 0.435294, 1 )
energy = 3.01
mode = 2
shadow_color = Color( 0.227451, 0.227451, 0.227451, 0 )

[node name="bottle_flash" type="Light2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2( -1, -9 )
scale = Vector2( 1.89844, 1.88361 )
z_index = -1
texture = ExtResource( 5 )
texture_scale = 10.0
energy = 4.0
shadow_enabled = true

[node name="Cave_sfx" type="AudioStreamPlayer2D" parent="."]
z_index = 999
z_as_relative = false
stream = ExtResource( 7 )
volume_db = -5.0
autoplay = true

[node name="Tween" type="Tween" parent="."]

[node name="Tween_inv" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.026, -6.346 )
z_index = 999
shape = SubResource( 1 )
one_way_collision_margin = 0.1

[node name="Bottle_sfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -1, -9 )
scale = Vector2( 1.89844, 1.88361 )
stream = ExtResource( 8 )
pitch_scale = 1.3

[node name="bottle_throw_particle" type="Particles2D" parent="."]
modulate = Color( 1, 0.94875, 0.566282, 1 )
self_modulate = Color( 1, 0.999793, 0.788184, 1 )
light_mask = 0
position = Vector2( -1, -9 )
rotation = -3.14159
emitting = false
amount = 1
lifetime = 0.52
one_shot = true
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 10 )

[node name="death_final_ambient" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.8

[node name="death_screen" type="CanvasLayer" parent="."]
layer = 5
visible = false

[node name="dark" type="TextureRect" parent="death_screen"]
light_mask = 0
margin_left = -7967.0
margin_top = -6040.0
margin_right = -7903.0
margin_bottom = -5976.0
rect_scale = Vector2( 272.38, 212.277 )
texture = SubResource( 16 )
expand = true

[node name="listening_screen" type="CanvasLayer" parent="."]
visible = false
follow_viewport_enable = true
follow_viewport_scale = 34.333

[node name="gray" type="ColorRect" parent="listening_screen"]
light_mask = 0
material = SubResource( 19 )
margin_left = -7967.0
margin_top = -6040.0
margin_right = -7903.0
margin_bottom = -5976.0
rect_scale = Vector2( 701.849, 705.226 )

[node name="journal_layer" type="CanvasLayer" parent="."]
layer = 3

[node name="Crucifix_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="ready" from="." to="." method="_on_Player_ready"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween_inv" to="." method="_on_Tween_inv_tween_completed"]
[connection signal="timeout" from="Crucifix_timer" to="." method="_on_Crucifix_timer_timeout"]
